# ReHarmonizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  problems_questions.txt  prototype_script.ipynb
.github/workflows/: build.yml
Source/: FrequencyDetector.cpp  FrequencyDetector.h  Oscillator.cpp  Oscillator.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PluginSetupTest.cpp
Source/Oscillator/: README.md
Source/Oscillator/include/: Oscillator.h  PluginEditor.h  PluginProcessor.h
Source/Oscillator/src/: PluginEditor.cpp  PluginProcessor.cpp
Source/Oscillator/tests/: OscillatorTests.h  RunTests.cpp
prototype/: main.py  requirements.txt
tools/: install_plugin.sh
